<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gallery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/tbSelectedTour"
        android:background="?attr/colorPrimary"
        style="@style/Toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:elevation="4dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imBtnPrev"
            android:layout_width="15dp"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            app:srcCompat="@mipmap/ic_chevron_left" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="160dp"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            android:layout_centerHorizontal="true"
            android:id="@+id/imGallery"
            android:layout_weight="8"
            />
        <ImageButton
            android:id="@+id/imBtnNext"
            android:layout_width="15dp"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            app:srcCompat="@mipmap/ic_chevron_right" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="vertical" >

                <RatingBar
                    android:id="@+id/ratBar"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="6"
                    android:progressDrawable="@drawable/ratingbar_orange"
                    android:stepSize="0.1"
                    />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite"
                android:elevation="4dp"
                android:layout_margin="8dp"
                >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center"
                        >

                        <LinearLayout
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="4"
                            android:orientation="vertical">
                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/tvNameResort"
                                style="@style/MyTextViewStyle"
                                android:textSize="20sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Resort" />

                            <TextView
                                android:id="@+id/tvDateDurality"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="City" />


                        </LinearLayout>
                        <ImageView
                            android:id="@+id/imLike"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/like" />
                    </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite"
                android:elevation="4dp"
                android:layout_margin="8dp"
                >


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"

                        >


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:orientation="horizontal">


                            <ImageView
                                android:id="@+id/imInPrice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                app:srcCompat="@mipmap/roup837" />
                            <TextView
                                android:id="@+id/tvInPrice1"
                                style="@style/MyTextViewStyle"
                                android:textColor="@color/colorOrange"
                                android:paddingStart="10dp"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_in_price" />
                            </LinearLayout>

                            <TextView
                                android:id="@+id/tvInPrice"
                                android:layout_width="wrap_content"
                                android:paddingStart="35dp"
                                android:layout_height="wrap_content"
                                android:text="City" />

                        </LinearLayout>
                    </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    >


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">


                            <ImageView
                                android:id="@+id/imPlacement"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                app:srcCompat="@mipmap/roup836" />
                            <TextView
                                android:id="@+id/tvPlacement1"
                                style="@style/MyTextViewStyle"
                                android:textColor="@color/colorOrange"
                                android:paddingStart="10dp"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_placement" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvPlacement"
                            android:layout_width="wrap_content"
                            android:paddingStart="35dp"
                            android:layout_height="wrap_content"
                            android:text="City" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    >


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">


                            <ImageView
                                android:id="@+id/imNomer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                app:srcCompat="@mipmap/roup835" />
                            <TextView
                                android:id="@+id/tvNomer1"
                                style="@style/MyTextViewStyle"
                                android:textColor="@color/colorOrange"
                                android:paddingStart="10dp"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_nomer" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvNomer"
                            android:layout_width="wrap_content"
                            android:paddingStart="35dp"
                            android:layout_height="wrap_content"
                            android:text="City" />

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    >


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">


                            <ImageView
                                android:id="@+id/imFood"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                app:srcCompat="@mipmap/roup834" />
                            <TextView
                                android:id="@+id/tvFood1"
                                style="@style/MyTextViewStyle"
                                android:textColor="@color/colorOrange"
                                android:paddingStart="10dp"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_food" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvFood"
                            android:layout_width="wrap_content"
                            android:paddingStart="35dp"
                            android:layout_height="wrap_content"
                            android:text="@string/text_food" />

                    </LinearLayout>
                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:background="@color/colorWhite"
                android:elevation="4dp"
                android:layout_margin="8dp"
                >

                <TextView
                    android:id="@+id/tvResPrice"
                    style="@style/MyTextViewStyle"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:paddingStart="35dp"
                    android:text="@string/text_to_pay" />
                <Button
                    android:layout_width="wrap_content"
                    android:id="@+id/btnResPrice"
                    android:layout_height="match_parent"
                    android:background="@drawable/ok_button_radius"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="9300 ГРН"
                    android:textColor="@color/colorWhite" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite"
                android:elevation="4dp"
                android:layout_margin="8dp"
                >

                <TextView
                    android:id="@+id/tvContactsData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    style="@style/MyTextViewStyle"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:text="Заповніть контактні дані"
                    android:textColor="@color/tab_selected_text_color" />

                <EditText
                    android:id="@+id/eTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Ваше ім'я"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textColor="@color/colorPrimary" />
                <EditText
                    android:id="@+id/eTextMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:hint="Ваш e-mail"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textColor="@color/colorPrimary" />
                <EditText
                    android:id="@+id/eTextNomer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:hint="Ваш телефон"
                    android:ems="10"
                    android:inputType="phone"
                    android:text=""
                    android:textColor="@color/colorPrimary" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@color/colorWhite"
                    android:layout_margin="10dp"
                    >

                <Button
                    android:layout_width="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:id="@+id/btnSend"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ok_button_radius"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/text_send"
                    android:textColor="@color/colorWhite" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
